--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="tm-brand-box">
                 <div class="tm-double-border-1">
                   <div class="tm-double-border-2">
-                    <h1 class="tm-brand text-uppercase">Dream Pulse</h1>
+                    <h1 class="tm-brand text-uppercase">Henry Noyes</h1>
                   </div>
                 </div>
               </div>
@@ -37,31 +37,25 @@ https://templatemo.com/tm-536-dream-pulse
               <ul id="tmMainNav" class="nav flex-column text-uppercase text-right tm-main-nav">
                 <li class="nav-item">
                   <a href="#intro" class="nav-link active">
-                    <span class="d-inline-block mr-3">Intro</span>
-                    <span class="d-inline-block tm-white-rect"></span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="#about" class="nav-link">
                     <span class="d-inline-block mr-3">About</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
                 <li class="nav-item">
+                  <a href="#about" class="nav-link">
+                    <span class="d-inline-block mr-3">Projects</span>
+                    <span class="d-inline-block tm-white-rect"></span>
+                  </a>
+                </li>
+                <li class="nav-item">
                   <a href="#work" class="nav-link">
-                    <span class="d-inline-block mr-3">Work</span>
+                    <span class="d-inline-block mr-3">Resume</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="#clients" class="nav-link">
-                    <span class="d-inline-block mr-3">Clients</span>
-                    <span class="d-inline-block tm-white-rect"></span>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="#talk" class="nav-link">
-                    <span class="d-inline-block mr-3">Let's Talk</span>
+                    <span class="d-inline-block mr-3">Contact</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
