--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Dream Pulse TemplateMo</title>
+    <title>Henry Noyes</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
@@ -62,22 +62,12 @@ https://templatemo.com/tm-536-dream-pulse
               </ul>
               <ul class="nav flex-row tm-social-links">
                 <li class="nav-item">
-                  <a href="https://facebook.com" class="nav-link tm-social-link">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="https://twitter.com" class="nav-link tm-social-link">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="https://dribbble.com" class="nav-link tm-social-link">
+                  <a href="https://drive.google.com/file/d/1VIZGZpMlSiQNPxnv1rUsB_28mrDC0BmZ/view" class="nav-link tm-social-link">
                     <i class="fab fa-dribbble"></i>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://linkedin.com" class="nav-link tm-social-link">
+                  <a href="https://linkedin.com/in/henry-noyes" class="nav-link tm-social-link">
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
