--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-536-dream-pulse
               <ul class="nav flex-row tm-social-links">
                 <li class="nav-item">
                   <a href="https://drive.google.com/file/d/1VIZGZpMlSiQNPxnv1rUsB_28mrDC0BmZ/view" class="nav-link tm-social-link">
-                    <i class="fab fa-dribbble"></i>
+                    <i class="fa-solid fa-file"></i>
                   </a>
                 </li>
                 <li class="nav-item">
