--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-536-dream-pulse
                 </li>
                 <li class="nav-item">
                   <a href="#clients" class="nav-link">
-                    <span class="d-inline-block mr-3">Contact</span>
+                    <span class="d-inline-block mr-3">Contactsss</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
