--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@ https://templatemo.com/tm-536-dream-pulse
                   </a>
                 </li>
               </ul>
-              <footer class="text-center text-white small">
+              <!--<footer class="text-center text-white small">
                 <p class="mb--0 mb-2">Copyright 2020 Dream Pulse</p>
                 <p class="mb-0">Design:
                   <a rel="nofollow" href="https://templatemo.com" class="tm-footer-link">Template Mo</a>
                 </p>
-              </footer>
+              </footer> -->
             </div>
           </nav>
           
