--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-536-dream-pulse
                 </li>
                 <li class="nav-item">
                   <a href="#clients" class="nav-link">
-                    <span class="d-inline-block mr-3">Contactsss</span>
+                    <span class="d-inline-block mr-3">Contacts</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
@@ -85,7 +85,7 @@ https://templatemo.com/tm-536-dream-pulse
             <div
               class="parallax-window"
               data-parallax="scroll"
-              data-image-src="img/dream-pulse-header.jpg">
+              data-image-src="img/cobra_hill.jpg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-white-transparent tm-intro">
