--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@ https://templatemo.com/tm-536-dream-pulse
                 </li>
                 <li class="nav-item">
                   <a href="#about" class="nav-link">
-                    <span class="d-inline-block mr-3">Projects</span>
+                    <span class="d-inline-block mr-3">Experience</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="#work" class="nav-link">
-                    <span class="d-inline-block mr-3">Resume</span>
+                    <span class="d-inline-block mr-3">Projects</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="#clients" class="nav-link">
-                    <span class="d-inline-block mr-3">Contacts</span>
+                    <span class="d-inline-block mr-3">Contact</span>
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
@@ -88,9 +88,9 @@ https://templatemo.com/tm-536-dream-pulse
               data-image-src="img/cobra_hill.jpg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-white-transparent tm-intro">
-                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-primary">Introducing Dream Pulse</h2>
-                        <p class="tm-color-gray">
+                    <div class="tm-bg-black-transparent tm-intro">
+                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-danger">Introducing Dream Pulse</h2>
+                        <p class="tm-color-white">
                           This box alpha 30 percent. Left sidebar is a sticky element.
                           Right side Contents are scrolling up and down. This background has a
                           parallax effect.
