--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-black-transparent tm-intro">
-                        <h2 class="tm-section-title mb-5 text-uppercase tm-color-white">Introducing Dream Pulse</h2>
+                        <h2 class="tm-section-title mb-5 text-uppercase">Introducing Dream Pulse</h2>
                         <p class="tm-color-white">
                           This box alpha 30 percent. Left sidebar is a sticky element.
                           Right side Contents are scrolling up and down. This background has a
