--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-536-dream-pulse
             <div
               class="parallax-window"
               data-parallax="scroll"
-              data-image-src="img/cobra_high_q.jpg">
+              data-image-src="img/cobra_high_q.jpeg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-black-transparent tm-intro">
