change intro box text

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
                     <div class="tm-bg-black-transparent tm-intro">
-                        <h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2>
+                        <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
                           Hey!
                         </p>
                         <p class="mb-0 text-white">
-                          Dream Pulse is a Bootstrap 4.3.1 template designed for your websites. You can modify this layout as you like.
+                          I am a Mathematics and Physics student at Northeastern University. I also have a minor in Data Science.
                         </p>
                     </div>              
                 </section>
