update first desc

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-536-dream-pulse
                           Hey!
                         </p>
                         <p class="mb-0 text-white">
-                          I am a Mathematics and Physics student at Northeastern University. I also have a minor in Data Science.
+                          I am a Mathematics and Physics student at Northeastern University. I also have a minor in Data Science. I am currently interested in pursuing the application of robotics in space.
                         </p>
                     </div>              
                 </section>
