--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://templatemo.com/tm-536-dream-pulse
           <div class="tm-section-wrap bg-white">
             <section id="about" class="row tm-section">
               <div class="col-xl-6">
-                <div class="tm-section-half">    
+                <div class="tm-section-full">    
                     <div><i class="fas fa-6x fa-balance-scale mb-5 tm-section-icon"></i></div>                        
                     <h2 class="tm-section-title tm-color-primary mb-5">About Us</h2>
                     <p class="mb-5">
@@ -116,22 +116,6 @@ https://templatemo.com/tm-536-dream-pulse
                     <p>
                       Sed at orci non metus tristique suscipit vitae in nibh. Sed
                       rutrum odio ac est hendrerit, at vestibulum felis condimentum.
-                    </p>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="tm-section-half">
-                    <div><i class="far fa-6x fa-building mb-5 tm-section-icon"></i></div>
-                    <h2 class="tm-section-title tm-color-primary mb-5">Company Profile</h2>
-                    <p class="mb-5">
-                      You can use this template for your commercial websites or for your clients. 
-                      You are NOT allowed to re-post this template as a downloadable ZIP file 
-                      on your template collection sites. It is illegal.
-                    </p>
-                    <p>
-                      Suspendisse fermentum orci eget lorem euismod suscipit. Morbi
-                      condimentum odio metus, at finibus dolor sollicitudin quis.
-                      Curabitur eu congue erat.
                     </p>
                 </div>
               </div>
