--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@ https://templatemo.com/tm-536-dream-pulse
               data-image-src="img/cobra_high_q.jpeg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-black-transparent tm-intro">
+                    <div class="tm-bg-black-opacity-75 tm-intro">
                         <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
                           Hey!
                         </p>
                         <p class="mb-0 text-white">
-                          I am a Mathematics and Physics student at Northeastern University. I also have a minor in Data Science. I am currently interested in pursuing the application of robotics in space.
+                           I am a 3rd year student at Northeastern University studying Mathematics and Physics, with a minor in Data Science. With my fundamental background I have been able to take on several engineering roles in the fields of energy and space. I am most passionate about space and the application of robotics on lunar and Martian surfaces. In my time outside of the classroom, I work at the Introductory Physics Lab at Northeastern and lead the electronical team for COBRA, more about that below!
                         </p>
                     </div>              
                 </section>
