--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@ https://templatemo.com/tm-536-dream-pulse
                     <span class="d-inline-block tm-white-rect"></span>
                   </a>
                 </li>
-              </ul>
-              <ul class="nav flex-row tm-social-links">
+                <ul class="nav flex-row tm-social-links">
                 <li class="nav-item">
                   <a href="https://drive.google.com/file/d/1VIZGZpMlSiQNPxnv1rUsB_28mrDC0BmZ/view" class="nav-link tm-social-link">
                     <i class="fas fa-file"></i>
@@ -71,6 +70,7 @@ https://templatemo.com/tm-536-dream-pulse
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
+                </ul>
               </ul>
               <!--<footer class="text-center text-white small">
                 <p class="mb--0 mb-2">Copyright 2020 Dream Pulse</p>
@@ -88,10 +88,10 @@ https://templatemo.com/tm-536-dream-pulse
               data-image-src="img/cobra_high_q.jpeg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-black-opacity-75 tm-intro">
+                    <div class="tm-bg-dark tm-intro">
                         <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
-                          Hey!
+                          Hello!
                         </p>
                         <p class="mb-0 text-white">
                            I am a 3rd year student at Northeastern University studying Mathematics and Physics, with a minor in Data Science. With my fundamental background I have been able to take on several engineering roles in the fields of energy and space. I am most passionate about space and the application of robotics on lunar and Martian surfaces. In my time outside of the classroom, I work at the Introductory Physics Lab at Northeastern and lead the electronical team for COBRA, more about that below!
