--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-536-dream-pulse
               data-image-src="img/cobra_high_q.jpeg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-red tm-intro">
+                    <div class="tm-bg-dark tm-intro">
                         <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
                           Hello!
