--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@ https://templatemo.com/tm-536-dream-pulse
             </div>
           </nav>
           
-          <main role="main" class="ml-sm-auto col-11">
+          <main role="main" class="ml-sm-auto col-12">
             <div
               class="parallax-window"
               data-parallax="scroll"
               data-image-src="img/cobra_high_q.jpeg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-dark tm-intro">
+                    <div class="tm-bg-danger tm-intro">
                         <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
                           Hello!
