--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@ https://templatemo.com/tm-536-dream-pulse
                     <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
+                <li class="nav-item">
+                  <a href="https://apple.com" class="nav-link tm-social-link">
+                    <i class="fab fa-apple"></i>
+                  </a>
+                </li>
                 </ul>
               </ul>
               <!--<footer class="text-center text-white small">
