--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes</title>
+    <title>Henry Noyes yes</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
@@ -67,12 +67,7 @@ https://templatemo.com/tm-536-dream-pulse
                 </li>
                 <li class="nav-item">
                   <a href="https://linkedin.com/in/henry-noyes" class="nav-link tm-social-link">
-                    <i class="fab fa-linkedin-in"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a href="https://apple.com" class="nav-link tm-social-link">
-                    <i class="fab fa-apple"></i>
+                    <i class="fab fa-linkedin-in mr-3"></i>
                   </a>
                 </li>
                 </ul>
