--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes yes</title>
+    <title>Henry Noyes 1</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
@@ -62,12 +62,12 @@ https://templatemo.com/tm-536-dream-pulse
                 <ul class="nav flex-row tm-social-links">
                 <li class="nav-item">
                   <a href="https://drive.google.com/file/d/1VIZGZpMlSiQNPxnv1rUsB_28mrDC0BmZ/view" class="nav-link tm-social-link">
-                    <i class="fas fa-file"></i>
+                    <i class="fas fa-file mx-auto"></i>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="https://linkedin.com/in/henry-noyes" class="nav-link tm-social-link">
-                    <i class="fab fa-linkedin-in mr-3"></i>
+                    <i class="fab fa-linkedin-in mr-auto"></i>
                   </a>
                 </li>
                 </ul>
