--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ https://templatemo.com/tm-536-dream-pulse
                 <ul class="nav flex-row tm-social-links">
                 <li class="nav-item">
                   <a href="https://drive.google.com/file/d/1VIZGZpMlSiQNPxnv1rUsB_28mrDC0BmZ/view" class="nav-link tm-social-link">
-                    <i class="fas fa-file mx-auto"></i>
+                    <i class="fas fa-file"></i>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="https://linkedin.com/in/henry-noyes" class="nav-link tm-social-link">
-                    <i class="fab fa-linkedin-in mr-auto"></i>
+                    <i class="fab fa-linkedin-in"></i>
                   </a>
                 </li>
                 </ul>
