--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes 1</title>
+    <title>Henry Noyes 2</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
@@ -88,7 +88,7 @@ https://templatemo.com/tm-536-dream-pulse
               data-image-src="img/cobra_high_q.jpeg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-black-transparent tm-intro">
+                    <div class="tm-bg-primary tm-intro">
                         <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
                           Hello!
@@ -284,40 +284,15 @@ https://templatemo.com/tm-536-dream-pulse
                 <div class="col-xl-6 mb-5">
                   <div class="tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
-                        <h2 class="tm-color-primary tm-section-title mb-4">Talk to Us</h2>
+                        <h2 class="tm-color-primary tm-section-title mb-4">Contact Me</h2>
                         <p class="mb-4">
-                          Sed aliquet, nibh ac hendrerit faucibus, tellus metus viverra
-                          tellus, vel volutpat purus orci ac ex.
+                          Please feel free to get in touch with me at noyes.he@northeastern.edu.
                         </p>
                         <p class="mb-3">
-                          120-240 Orci varius natoque penatibus, <br>
-                          parturient montes, 10660 <br>
-                          nasvetur ridiculus mus
+                          <a href = "mailto: noyes.he@norheastern.edu">Email Me!</a>
                         </p>
                     </div>                    
-                  </div>                  
-                </div>
-                <div class="col-xl-6 mb-5">
-                  <div class="tm-contact-form-wrap">
-                    <form action="" method="POST" class="tm-contact-form">
-                        <div class="form-group">
-                          <input type="text" id="contact_name" name="contact_name" class="form-control rounded-0 border-top-0 border-right-0 border-left-0" placeholder="Your Name" required="" />
-                        </div>
-                        <div class="form-group">
-                          <input type="email" id="contact_email" name="contact_email" class="form-control rounded-0 border-top-0 border-right-0 border-left-0" placeholder="Your Email" required="" />
-                        </div>
-                
-                        <div class="form-group">
-                          <textarea rows="4" id="contact_message" name="contact_message" class="form-control rounded-0 border-top-0 border-right-0 border-left-0" placeholder="Message..." required=""></textarea>
-                        </div>
-                
-                        <div class="form-group mb-0">
-                          <button type="submit" class="btn rounded-0 d-block ml-auto tm-btn-primary">
-                            SEND
-                          </button>
-                        </div>
-                      </form>
-                  </div>                    
+                  </div>                         
                 </div>
               </section>
           </div>
