--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes 2</title>
+    <title>Henry Noyes 1</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
@@ -281,7 +281,7 @@ https://templatemo.com/tm-536-dream-pulse
             
           <div class="tm-section-wrap bg-white">
             <section id="talk" class="row tm-section">
-                <div class="col-xl-6 mb-5">
+                <div class="col-xl-8 mb-5">
                   <div class="tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                         <h2 class="tm-color-primary tm-section-title mb-4">Contact Me</h2>
@@ -289,7 +289,7 @@ https://templatemo.com/tm-536-dream-pulse
                           Please feel free to get in touch with me at noyes.he@northeastern.edu.
                         </p>
                         <p class="mb-3">
-                          <a href = "mailto: noyes.he@norheastern.edu">Email Me!</a>
+                          <a type="button" class="btn btn-primary btn-lg" href="mailto: noyes.he@norheastern.edu">Email Me!</a>
                         </p>
                     </div>                    
                   </div>                         
