--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes 1</title>
+    <title>Henry Noyes 2</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
@@ -86,9 +86,9 @@ https://templatemo.com/tm-536-dream-pulse
               class="parallax-window"
               data-parallax="scroll"
               data-image-src="img/cobra_high_q.jpeg">
-              <div class="tm-section-wrap">
+              <div class="tm-section-wrap bg-primary">
                 <section id="intro" class="tm-section">
-                    <div class="tm-bg-primary tm-intro">
+                    <div class="tm-bg-black-transparent tm-intro">
                         <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
                           Hello!
@@ -284,7 +284,7 @@ https://templatemo.com/tm-536-dream-pulse
                 <div class="col-xl-8 mb-5">
                   <div class="tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
-                        <h2 class="tm-color-primary tm-section-title mb-4">Contact Me</h2>
+                        <h2 class="tm-color-primary tm-section-title mb-4">Contact</h2>
                         <p class="mb-4">
                           Please feel free to get in touch with me at noyes.he@northeastern.edu.
                         </p>
