--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes 2</title>
+    <title>Henry Noyes 1</title>
 <!--
 DREAM PULSE
 https://templatemo.com/tm-536-dream-pulse
@@ -86,8 +86,8 @@ https://templatemo.com/tm-536-dream-pulse
               class="parallax-window"
               data-parallax="scroll"
               data-image-src="img/cobra_high_q.jpeg">
-              <div class="tm-section-wrap bg-primary">
-                <section id="intro" class="tm-section">
+              <div class="tm-section-wrap">
+                <section id="intro" class="tm-section bg-primary">
                     <div class="tm-bg-black-transparent tm-intro">
                         <!-- <<h2 class="tm-section-title mb-5 text-uppercase text-white">Introducing Dream Pulse</h2> -->
                         <p class="text-white">
