--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               class="parallax-window"
               data-parallax="scroll"
               data-image-src="img/cobra_high_q.jpeg">
-              <div class="tm-section-wrap mb-3">
+              <div class="tm-section mb-3">
                 <section id="intro" class="tm-section">
                     <div class="tm-section-full mb-3">
                         <p class="mb-3 bg-dark text-white">
