--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes 3</title>
+    <title>Henry Noyes 0</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -79,8 +79,8 @@
               data-image-src="img/cobra_high_q.jpeg">
               <div class="tm-section-wrap">
                 <section id="intro" class="tm-section">
-                    <div class="tm-section-full mx-5 my-5 bg-dark">
-                        <p class="text-white">
+                    <div class="tm-section-full bg-dark">
+                        <p class="m-5 text-white">
                            Hello! I am a 3rd year student at Northeastern University studying Mathematics and Physics, with a minor in Data Science. With my fundamental background I have been able to take on several engineering roles in the fields of energy and space. I am most passionate about space and the application of robotics on lunar and Martian surfaces. In my time outside of the classroom, I work at the Introductory Physics Lab at Northeastern and lead the electronical team for COBRA, more about that below!
                         </p>
                     </div>              
