--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                         <h2 class="tm-color-primary tm-section-title mb-4">Contact</h2>
                         <p class="mb-4">
-                          Please feel free to get in touch with me at noyes.he@northeastern.edu.
+                          Please feel free to get in touch with me at <p class="font-weight-bold">noyes.he@northeastern.edu</p>
                         </p>
                         <p class="mb-3">
                           <a type="button" class="btn btn-primary btn-lg" href="mailto: noyes.he@norheastern.edu">Email Me!</a>
