--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes</title>
+    <title>Henry Noyes1</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -268,12 +268,12 @@
             
           <div class="tm-section-wrap bg-white">
             <section id="talk" class="row tm-section">
-                <div class="col-xl-8 mb-5">
+                <div class="col-xl-7 mb-5">
                   <div class="tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                         <h2 class="tm-color-primary tm-section-title mb-4">Contact</h2>
                         <p class="mb-4">
-                          Please feel free to get in touch with me at <p class="font-weight-bold">noyes.he@northeastern.edu</p>
+                          Please feel free to get in touch with me at <p class="fw-bold">noyes.he@northeastern.edu</p>
                         </p>
                         <p class="mb-3">
                           <a type="button" class="btn btn-primary btn-lg" href="mailto: noyes.he@norheastern.edu">Email Me!</a>
