--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes1</title>
+    <title>Henry Noyes2</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -279,6 +279,11 @@
                           <a type="button" class="btn btn-primary btn-lg" href="mailto: noyes.he@norheastern.edu">Email Me!</a>
                         </p>
                     </div>                    
+                  </div>                         
+                </div>
+                <div class="col-xl-3 mb-5">
+                  <div class="tm-double-border-1 tm-border-gray">
+                    <img src="img/cobra_hex.img" class="img-fluid">                  
                   </div>                         
                 </div>
               </section>
