--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes2</title>
+    <title>Henry Noyes1</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -283,7 +283,7 @@
                 </div>
                 <div class="col-xl-3 mb-5">
                   <div class="tm-double-border-1 tm-border-gray">
-                    <img src="img/cobra_hex.img" class="img-fluid">                  
+                    <img src="img/cobra_NG2.png" class="img-fluid">                  
                   </div>                         
                 </div>
               </section>
