--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes2</title>
+    <title>Henry Noyes3</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -25,7 +25,9 @@
             <div class="tm-sidebar-sticky">
               <div class="tm-brand-box">
                 <div class="tm-double-border-1">
-                  <h1 class="tm-brand text-uppercase">Henry Noyes</h1>
+                  <div class="tm-double-border-2">
+                    <h1 class="tm-brand text-uppercase">Henry Noyes</h1>
+                  </div>
                 </div>
               </div>
 
@@ -111,7 +113,6 @@
             <section id="work" class="row tm-section">
               <div class="col-12">
                 <div class="w-100 tm-double-border-1 tm-border-gray">
-                    <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                       <div class="tm-gallery-wrap">
                           <h2 class="tm-color-primary tm-section-title mb-4 ml-2">Our Work</h2>
                           <div class="tm-gallery">
@@ -165,8 +166,7 @@
                                 </figcaption>
                               </figure>
                             </div>
-                          </div>
-                      </div>                        
+                          </div>                      
                     </div>                  
                   </div>     
               </div>         
