--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes3</title>
+    <title>Henry Noyes2</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -113,16 +113,17 @@
             <section id="work" class="row tm-section">
               <div class="col-12">
                 <div class="w-100 tm-double-border-1 tm-border-gray">
+                  <div class="tm-double-border-2 tm-border-gray tm-box-pad">
                       <div class="tm-gallery-wrap">
-                          <h2 class="tm-color-primary tm-section-title mb-4 ml-2">Our Work</h2>
+                          <h2 class="tm-color-primary tm-section-title mb-4 ml-2">My Work</h2>
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
-                                <img src="img/gallery/01.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/GL_desert.jpg" alt="desert" class="img-fluid">
                                 <figcaption>
-                                  <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/01.jpg">View more</a>
+                                  <h2>NASA <span>Article</span></h2>
+                                  <p>NASA published an article on the competition.</p>
+                                  <a href="https://www.nasa.gov/feature/northeastern-university-slithers-to-the-top-with-big-idea-alternative-rover-concept">Read more</a>
                                 </figcaption>
                               </figure>
                             </div>
@@ -167,6 +168,7 @@
                               </figure>
                             </div>
                           </div>                      
+                      </div>
                     </div>                  
                   </div>     
               </div>         
