--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes2</title>
+    <title>Henry Noyes3</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -123,17 +123,17 @@
                                 <figcaption>
                                   <h2>NASA <span>Article</span></h2>
                                   <p>NASA published an article on the competition.</p>
-                                  <a href="https://www.nasa.gov/feature/northeastern-university-slithers-to-the-top-with-big-idea-alternative-rover-concept">Read more</a>
+                                  <a href="https://www.nasa.gov/feature/northeastern-university-slithers-to-the-top-with-big-idea-alternative-rover-concept" class="link-primary">Read more</a>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/02.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/cobra_NG2.png" alt="nat geo" class="img-fluid">
                                 <figcaption>
-                                  <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/02.jpg">View more</a>
+                                  <h2>NatGeo <span>Article</span></h2>
+                                  <p>National Geographic published an article on the competition.</p>
+                                  <a href="https://www.nationalgeographic.com/science/article/lunar-robot-snakes-explore-the-moon-nasa" class="link-primary">Read more</a>
                                 </figcaption>
                               </figure>
                             </div>
