--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes3</title>
+    <title>Henry Noyes2</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -146,21 +146,17 @@
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/04.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/GL_plasma.jpg" alt="plasma" class="img-fluid">
                                 <figcaption>
-                                  <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/04.jpg">View more</a>
+                                  <h2>Microwave <span>Plasma</span></h2>
                                 </figcaption>
                               </figure>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
-                                <img src="img/gallery/05.jpg" alt="Our Work Image" class="img-fluid">
+                                <img src="img/gallery/GL_model.png" alt="model" class="img-fluid">
                                 <figcaption>
-                                  <h2>Fresh <span>Bubba</span></h2>
-                                  <p>Bubba likes to appear out of thin air.</p>
-                                  <a href="img/gallery/large/05.jpg">View more</a>
+                                  <h2>RF <span>Modeling</span></h2>
                                 </figcaption>
                               </figure>
                             </div>
