--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes2</title>
+    <title>Henry Noyes3</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -118,7 +118,7 @@
                           <h2 class="tm-color-primary tm-section-title mb-4 ml-2">My Work</h2>
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
-                              <figure class="effect-bubba">
+                              <figure class="effect-lily">
                                 <img src="img/gallery/GL_desert.jpg" alt="desert" class="img-fluid">
                                 <figcaption>
                                   <h2>NASA <span>Article</span></h2>
@@ -127,13 +127,8 @@
                               <a href="https://www.nasa.gov/feature/northeastern-university-slithers-to-the-top-with-big-idea-alternative-rover-concept" class="link-primary">Read more</a>
                             </div>
                             <div class="tm-gallery-item">
-                              <figure class="effect-bubba">
                                 <img src="img/cobra_NG2.png" alt="nat geo" class="img-fluid">
-                                <figcaption>
-                                  <h2>NatGeo <span>Article</span></h2>
-                                  <a href="https://www.nationalgeographic.com/science/article/lunar-robot-snakes-explore-the-moon-nasa" class="link-primary">Read more</a>
-                                </figcaption>
-                              </figure>
+                                <a href="https://www.nationalgeographic.com/science/article/lunar-robot-snakes-explore-the-moon-nasa" class="link-primary">Read more</a>
                             </div>
                             <div class="tm-gallery-item">
                               <figure class="effect-bubba">
