--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes3</title>
+    <title>Henry Noyes2</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -114,7 +114,7 @@
               <div class="col-12">
                 <div class="w-100 tm-double-border-1 tm-border-gray">
                   <div class="tm-double-border-2 tm-border-gray tm-box-pad">
-                      <div class="tm-gallery-wrap">
+                      <div class="tm-gallery">
                           <h2 class="tm-color-primary tm-section-title mb-4 ml-2">My Work</h2>
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
