--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes9</title>
+    <title>Henry Noyes2</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -117,13 +117,14 @@
                           <h2 class="tm-color-primary tm-section-title mb-4 ml-2">My Work</h2>
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
-                              <figure class="effect-lily">
+                              <figure class="effect-bubba">
                                 <img src="img/gallery/GL_desert.jpg" alt="desert" class="img-fluid">
                                 <figcaption>
                                   <h2>NASA <span>Article</span></h2>
+                                  <a href="img/gallery/GL_desert.jpg"> view more</a>
                                 </figcaption>
                               </figure>
-                              <a href="https://www.nasa.gov/feature/northeastern-university-slithers-to-the-top-with-big-idea-alternative-rover-concept" class="link-primary">Read more</a>
+                <!--              <a href="https://www.nasa.gov/feature/northeastern-university-slithers-to-the-top-with-big-idea-alternative-rover-concept" class="link-primary">Read more</a> -->
                             </div>
                             <div class="tm-gallery-item">
                                 <img src="img/cobra_NG2.png" alt="nat geo" class="img-fluid">
