--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes2</title>
+    <title>Henry Noyes3</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -130,6 +130,7 @@
                               <figure class="effect-bubba">
                                 <img src="img/cobra_NG2.png" alt="nat geo" class="img-fluid">
                                 <figcaption>
+                                  <h2>NatGeo <span>Article</span></h2>
                                   <a href="img/cobra_NG2.png">View more</a>
                                 </figcaption>
                               <!-- <a href="https://www.nationalgeographic.com/science/article/lunar-robot-snakes-explore-the-moon-nasa" class="link-primary">Read more</a> -->
