--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes3</title>
+    <title>Henry Noyes2</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -188,17 +188,17 @@
                       <div class="row tm-clients-images">
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                           <a href="https://google.com">
-                            <img src="img/client-1.png" alt="Client Image" class="img-fluid tm-client-img" />
+                            <img src="img/gallery/GL_desert.jpg" alt="Client Image" class="img-fluid tm-client-img" />
                           </a>                          
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                           <a href="https://facebook.com">
-                            <img src="img/client-2.png" alt="Client Image" class="img-fluid tm-client-img" />
+                            <img src="img/gallery/GL_model.png" alt="Client Image" class="img-fluid tm-client-img" />
                           </a>                          
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
                           <a href="https://twitter.com">
-                            <img src="img/client-3.png" alt="Client Image" class="img-fluid tm-client-img" />
+                            <img src="img/gallery/GL_plasma.jpg" alt="Client Image" class="img-fluid tm-client-img" />
                           </a>                          
                         </div>
                         <div class="col-xl-3 col-lg-6 col-md-4 col-sm-6 tm-img-wrap">
