--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Henry Noyes2</title>
+    <title>Henry Noyes3</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
     <link rel="stylesheet" href="css/all.min.css" />
@@ -118,7 +118,10 @@
                           <div class="tm-gallery">
                             <div class="tm-gallery-item">                        
                               <figure class="effect-bubba">
-                                <img src="img/gallery/GL_desert.jpg" alt="desert" class="img-fluid">
+                                <a href="https://google.com">
+                                  <img src="img/gallery/GL_desert.jpg" alt="Client Image" class="img-fluid tm-client-img" />
+                                </a>
+                                <!-- <img src="img/gallery/GL_desert.jpg" alt="desert" class="img-fluid"> -->
                                 <figcaption>
                                   <h2>NASA <span>Article</span></h2>
                                   <a href="img/gallery/GL_desert.jpg"> View more</a>
